--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 #choiceView{
 	padding: 70px 120px;
-	transform: translateX(0px);
 	transition: 0.4s ease transform, 0.4s ease opacity;
 }
 
@@ -77,6 +76,7 @@
 	width: 1%;
 	height: 100%;
 	display: inline-block;
+	transition: 0.2s ease width;
 }
 
 #infobox{
@@ -95,7 +95,7 @@
 	width: 30px;
 	height: 30px;
 	position: absolute;
-	margin-left: 325px;
+	right: -10px;
 	margin-top: -120px;
 	transform: rotateZ(45deg);
 }
