--- a/main.css
+++ b/main.css
@@ -57,6 +57,7 @@
 	width: 300px;
 	padding: 10px;
 	background-color: lightgray;
+	margin-bottom: 50px;
 }
 
 #sideContainer > ul{
@@ -81,8 +82,7 @@
 
 #infobox{
 	background-color: lightgray;
-	display: inline-block;
-	position: absolute;
+	position: fixed;
 	right: 380px;
 	top: 30%;
 	padding: 0px 30px;
