--- a/main.css
+++ b/main.css
@@ -62,14 +62,24 @@
 
 #sideContainer > ul{
 	list-style-type: none;
+	padding-left: 0;
 }
 
 #sideContainer .scoreBox{
 	background-color: gray;
 	height: 40px;
-	margin: 10px 10px 20px 30px;
+	margin: 10px 10px 20px 10px;
 	right: 0px;
 	position: relative;
+	width: 70%;
+	display: inline-block;
+}
+
+.team-icon{
+	width: 50px;
+	height: 50px;
+	display: inline-block;
+	margin-top: -25px;
 }
 
 #sideContainer .scoreValue{
